odf/Deployments/odf-externalroute.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: external-odf
  annotations:
    link.argocd.argoproj.io/external-link: http://odf-aodf.apps.ocp.sdxsolutions.com/
spec:
  host: odf-aodf.apps.ocp.sdxsolutions.com
  to:
    kind: Service
    name: odf
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
