odf/Deployments/odf-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: odf
  annotations:
    link.argocd.argoproj.io/external-link: odf-aodf.apps.ocp.sdxsolutions.com
spec:
  to:
    kind: Service
    name: odf
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
